fix: coderabbit issues and lint
